add docker deployment config